// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"enum Breakpoint{
               ~ Missing space before opening brace.
  Large,
  Medium,
}

interface State{
               ~ Missing space before opening brace.
  currentBreakpoint: Breakpoint;
~~~~~~~~~~~~~~~~~
}
~
"
`;

exports[` 2`] = `
"enum Breakpoint {
  Large,
  Medium,
}

interface State {
  currentBreakpoint: Breakpoint;
}
"
`;
